Upgrade to Java 11 and newest libs