@@ -6,16 +6,24 @@ apply plugin: 'io.spring.dependency-management'
 
 version = '0.0.1'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 11
+targetCompatibility = 11
+
+test {
+    jvmArgs '--add-exports', 'java.base/jdk.internal.ref=ALL-UNNAMED' //TODO Cassandra 4 - Remove
+}
 
 dependencies {
-    compileOnly 'org.projectlombok:lombok:1.16.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.4'
+    compileOnly 'org.projectlombok:lombok:1.18.4'
 
-    compile 'org.springframework.boot:spring-boot-starter-web:1.5.9.RELEASE'
-    compile 'org.springframework.data:spring-data-cassandra:2.0.5.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-web:2.1.1.RELEASE'
+    compile 'org.springframework.data:spring-data-cassandra:2.1.3.RELEASE'
+    compile 'io.dropwizard.metrics:metrics-core:4.0.5'                //TODO Cassandra 4 - Remove
+    compile 'com.codahale.metrics:metrics-core:3.0.1'                 //TODO Cassandra 4 - Remove
 
-    testCompile 'org.springframework.boot:spring-boot-starter-test'
-    testCompile 'org.spockframework:spock-spring:1.1-groovy-2.4'
-    testCompile 'org.cassandraunit:cassandra-unit-spring:3.3.0.2'
+    testCompile 'org.springframework.boot:spring-boot-starter-test:2.1.1.RELEASE'
+    testCompile 'org.spockframework:spock-spring:1.2-groovy-2.5'
+    testCompile 'org.cassandraunit:cassandra-unit-spring:3.5.0.1'
+    testCompile 'org.apache.cassandra:cassandra-all:4.0-SNAPSHOT'     //TODO Cassandra 4 - Remove
 }
